fixed spacing issue.

--- a/style.css
+++ b/style.css
@@ -405,7 +405,7 @@ article .icon {
   align-items: center;
   justify-content: center;
   gap: 0.5rem;
-  margin: 1rem;
+  margin: 1.5rem;
 }
 
 .contact-info-container p {
